[Added] add logic of products endpoints
