# src/openfoodfact/openfoodfact.controller.ts
@@ -1,4 +1,0 @@
-import { Controller } from '@nestjs/common';
-
-@Controller('openfoodfact')
-export class OpenfoodfactController {}
